[Fix Update] Service Page anchor tag 'blue-touch' button on mobile screen

--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -79,21 +79,7 @@
       .howto-button-wrapper {
         width: 100%;
         text-align: center;
-
-        button {
-          font-weight: bold;
-          margin-top: 5em;
-          padding: 1em 3em;
-          // border: 1px solid transparent;
-          // transition: .2s;
-
-          // &:hover {
-          //   color: $dark-grey-blue;
-          //   background-color: white;
-          //   border: 1px solid $dark-grey-blue;
-          //   transition: .2s;
-          // }
-        }
+        margin-top: 5em;
       }
     }
 
